@@ -190,6 +190,7 @@ SDCCERR - SDCC Standard error handler
 #define E_NOT_ALLOWED 172	    /* %s not allowed here */
 #define E_BAD_TAG 173               /* '%s' is not a %s tag */
 #define E_ENUM_NON_INTEGER 174      /* enumeration constant not an integer */
+#define W_DEPRECATED_PRAGMA 175     /* deprecated pragma */
 
 /** Describes the maximum error level that will be logged.  Any level
  *  includes all of the levels listed after it.
